style.css
/* ... */
.frame-8 {
  order: 1;
  width: 330px;
  height: 72px;
}

/* contact-me */

.contact-me-img {
  position: absolute;
  width: 480px;
  height: 779px;
  z-index: -1;
  top: 5200px;
  margin-top: 30px;
}

.contact-shapes {
  position: absolute;
  z-index: 1;
  top: 30px;
  height: 800px;
  left: 222px;
}

.contact-text {
  position: absolute;
  top: 5370px;
  display: flex;
  margin-left: 120px;
}

.Contactme {
  position: absolute;
  width: 801px;
  height: 56px;
  font-style: normal;
  font-weight: 900;
  font-size: 40px;
  line-height: 52px;
  color: #fff;
}

.contactmepara {
  display: flex;
  position: absolute;
  width: 327px;
  height: 102px;
  margin-left: 80px;
  top: 5460px;
  text-align: center;
}

.contactme-p {
  position: absolute;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #ebebff;
}

/* contact form */

.contact-information {
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 5650px;
  margin-left: 30px;
}

.name-input {
  position: abosulte;
  height: 38px;
  width: 400px;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 20px;
  align-items: center;
  color: #000;
  padding: 10px;
}

.text-box {
  width: 400px;
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  padding: 10px;
  text-align: left;
}

.contact-btn {
  display: flex;
  top: 350px;
  position: absolute;
  left: 0;
}

/* Desktop-version */

@media (min-width: 768px) {
  body {
    margin: 0;
  }

  footer {
    margin: 0;
  }

  .button1 {
    display: none;
  }

  .first-img {
    display: none;
  }

  .orders {
    display: flex;
    gap: 10px;
    color: #344563;
    text-decoration: none;
    margin-top: 4%;
    margin-right: 3%;
  }

  .container {
    position: relative;
    width: 100%;
  }

  .linkers {
    font-family: "Poppins", sans-serif;
    font-style: normal;
    font-weight: 500;
  }

  .section-2 {
    background: url(Microverse-Student-Project-1/header.png) no-repeat;
    background-size: 99%;
    background-position-x: right;
    background-color: #fff;
    display: flex;
    flex-direction: column;
    height: 1000px;
    width: 100%;
    border-bottom-left-radius: 70px;
    margin-bottom: 0;
  }

  .paragraph {
    margin-top: 100px;
    margin-left: 300px;
    margin-right: 390px;
    text-align: left;
  }

  .section-3 {
    display: grid;
    vertical-align: bottom;
    margin-top: 30px;
    margin-bottom: 30px;
    gap: 142px;
    padding: 142px;
    width: 1100px;
    height: 2694px;
  }

  .card {
    width: 1156px;
    height: 496px;
    display: flex;
    flex-direction: row;
    border-radius: 24px;
    gap: 50px;
    position: relative;
  }

  .work-img {
    width: 544px;
    height: 448px;
    border-radius: 8px;
  }

  .left-block {
    position: absolute;
    right: 190px;
    top: 30px;
    gap: 8px;
  }

  .work-img1 {
    width: 544px;
    height: 448px;
    border-radius: 8px;
    position: absolute;
    right: 20px;
    top: 30px;
  }

  .left-block1 {
    position: absolute;
    left: 50px;
    top: 30px;
  }

  .des-text {
    width: 500px;
    height: 50px;
    margin-top: 40px;
  }

  /* about my self section */

  .desk-continer {
    width: 100%;
    height: 942px;
    background-color: #fff;
    border-top-right-radius: 80px;
    border-top-right-radius: 10%;
  }

  .about-my-self {
    display: none;
    width: 1500px;
    height: 942px;
    position: absolute;
    z-index: -1;
  }

  .skill {
    position: absolute;
    width: 600px;
    right: 90px;
    left: 600px;
    top: 4180px;
  }

  .items-list {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 15px;
  }

  .frame9 {
    width: 122px;
    height: 120px;
    position: relative;
  }

  .javaS {
    position: absolute;
    height: 24px;
    left: 10px;
    right: 12px;
    top: 60px;
  }

  .top {
    position: absolute;
    left: 150px;
    top: 4270px;
    width: 500px;
  }

  .first-text {
    margin-bottom: 10px;
  }

  .second-text {
    margin-top: 0;
    width: 710px;
  }

  .second-text1 {
    width: 475px;
  }

  .h-line {
    position: absolute;
    width: 70%;
    left: 80px;
    right: 0;
    top: 400px;
    height: 1px;
    color: #dfe1e6;
  }

  .h-line1 {
    top: 330px;
  }

  /* contact me section */

  .contact-me-img {
    background: url(Microverse-Student-Project-1/fimg.png)  #6070ff no-repeat;
    background-size: 99%;
    background-position-y: center;
    position: absolute;
    width: 100%;
    height: 920px;
    top: 4920px;
    margin-top: 20px;
    border-top-left-radius: 10%;
  }

  .contactme-img {
    display: none;
  }

  .contact-text {
    position: absolute;
    top: 5100px;
    margin-left: 400px;
    text-align: center;
  }

  .contactmepara {
    display: flex;
    width: 569px;
    height: 102px;
    position: absolute;
    top: 5200px;
    margin-left: 520px;
    text-align: center;
  }

  .contact-information {
    margin-left: 590px;
    position: absolute;
    top: 5350px;
  }

  .name-input {
    border-radius: 0;
  }

  .text-box {
    border-radius: 0;
  }

  .contact-btn {
    display: flex;
    position: absolute;
    left: 150px;
  }

  .contact-shapes {
    display: none;
  }
}

